--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Splash Example Application</string>
+    <string name="splash_loading_text">Loading...</string>
+    <string name="welcome_message">Welcome To The App</string>
 </resources>
